--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.smallrye-graphql.error-extension-fields = [exception,classification,code
 
 quarkus.hibernate-orm.database.generation = update
 quarkus.hibernate-orm.log.sql = true
-quarkus.hibernate-orm.unsupported-properties."hibernate.generate_statistics" = true
+quarkus.hibernate-orm.metrics.enabled = true
 quarkus.datasource.devservices.port = 5432
 quarkus.datasource.devservices.enabled = true
 
